# logfacade

./: CMakeLists.txt  README.md  logfacade.hpp  vcpkg-configuration.json  vcpkg.json  xmake.lua
include/: logfacade.hpp
